--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "wd": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
