--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "redux-persist": "^6.0.0",
-    "wd": "^1.13.0"
+    "webdriverio": "^6.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
