--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint src/**/*.js App.js",
+    "lint": "eslint ./ --ext .json --ext .js",
     "tests": "jest --detectOpenHandles --forceExit --verbose --silent",
     "test": "jest",
     "test:update-snapshot": "jest -u",
@@ -38,7 +38,7 @@
     "wd": "^1.13.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.11.6",
     "babel-preset-expo": "^8.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
