--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./ --ext .json --ext .js",
+    "lint": "eslint ./src --ext .js",
     "tests": "jest --detectOpenHandles --forceExit --verbose --silent",
     "test": "jest",
     "test:update-snapshot": "jest -u",
