--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
 
       - run: 
           name: Run ESLint
-          command: yarn lint
+          command: yarn lint --fix
 
       - run: 
           name: Run Jest Test
