--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=deleonAndroid3_firestore-chat
-
+sonar.organization=deleonandroid3
 # --- optional properties ---
 
 # defaults to project key
