--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,11 @@ jobs:
 
       - run: 
           name: Run ESLint
-          command: yarn lint
+          command: yarn lint --fix
 
       - run: 
           name: Run Jest Test
-          command: yarn test
+          command: yarn test 
 
   e2eTest:
     docker:
