Fix lint error and changed config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,4 +80,4 @@ workflows:
             - unitTest
           filters:
               branches:
-                only: Merger
+                only: master
