--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,13 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=deleonAndroid3_firestore-chat
 sonar.organization=deleonandroid3
+sonar.projectVersion=1.1
+
 # --- optional properties ---
 
 # defaults to project key
 #sonar.projectName=My project
 # defaults to 'not provided'
-#sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Defaults to .
 #sonar.sources=.
