Added jest coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,9 @@ sonar.projectKey=deleonAndroid3_firestore-chat
 sonar.organization=deleonandroid3
 sonar.projectVersion=1.0
 
+sonar.language=js
+sonar.tests=./__tests__
+
 # --- optional properties ---
 
 # defaults to project key
