Added sources in sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,10 @@ sonar.projectKey=deleonAndroid3_firestore-chat
 sonar.organization=deleonandroid3
 sonar.projectVersion=1.0
 
+sonar.sources=.
 sonar.language=js
 sonar.tests=./__tests__
+sonar.test.inclusions=./**/*.test.js
 
 # --- optional properties ---
 
