--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,16 +6,4 @@ sonar.projectVersion=1.0
 sonar.sources=.
 sonar.language=js
 sonar.tests=./__tests__
-sonar.test.inclusions=./**/*.test.js
-
-# --- optional properties ---
-
-# defaults to project key
-#sonar.projectName=My project
-# defaults to 'not provided'
- 
-# Path is relative to the sonar-project.properties file. Defaults to .
-#sonar.sources=.
- 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.test.inclusions=./__tests__/*.test.js
