--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,6 @@ sonar.sources=.
 sonar.language=js
 sonar.tests=./__tests__
 sonar.test.inclusions=./__tests__/*.test.js
+
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=./test-report.xml
