Change sonarcloud sources

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,10 +3,10 @@ sonar.projectKey=deleonAndroid3_firestore-chat
 sonar.organization=deleonandroid3
 sonar.projectVersion=1.0
 
-sonar.sources=.
+sonar.sources=src
 sonar.language=js
 sonar.tests=./__tests__
-sonar.test.inclusions=./__tests__/*.test.js
+sonar.test.inclusions=./__tests__/*.js
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=./test-report.xml
