--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
 
       - run:
           name: Install yarn dependencies
-          command: yarn install --frozen-lockfile
+          command: yarn install
 
       - save_cache:
           paths:
