Removed Demo Changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,6 @@ jobs:
           name: Run e2e Test
           command: node e2e-test.js
 
-
 workflows:
   node-tests:
     jobs:
@@ -85,4 +84,7 @@ workflows:
       - e2eTest:
           requires:
             - unitTest
-          
+          filters:
+            branches:
+              only:
+                - master
