Added Change Theme Function

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,5 +90,5 @@ workflows:
             - unitTest
           filters:
             branches:
-              only:
-                - main
+              ignore:
+                - master
